# rippled-workload

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.config  Dockerfile.rippled  Dockerfile.rippled-fuzzer  Dockerfile.workload  Dockerfile.xrpld  README.md  check.sh  cleanup.sh  conan_default  create_validator_configs.sh  docker-compose.yml  flake.nix  fuzzer-entrypoint.sh  log_level.sh  prep_network.sh  pyproject.toml  pyrightconfig.json  run.py  run_all_tests.sh  tests.sh
.claude/: settings.json
.claude/agents/: experiment-analyst.md  workload-developer.md
.claude/commands/: local-run.md  regenerate-genesis.md
.claude/rules/: antithesis.md  coding.md  xrpl-sequencing.md
.claude/skills/: debug-antithesis-run.md
.claude/skills/antithesis-agent-browser/: SKILL.md
.claude/skills/antithesis-debug/: SKILL.md
.claude/skills/antithesis-documentation/: SKILL.md
.claude/skills/antithesis-launch/: SKILL.md
.claude/skills/antithesis-query-logs/: SKILL.md
.claude/skills/antithesis-research/: SKILL.md
.claude/skills/antithesis-skills-feedback/: SKILL.md
.claude/skills/antithesis-triage/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: checks.yml
.zed/: settings.json
config/: docker-compose.yml
config/volumes/workload/: pyproject.toml
config/volumes/workload/src/workload/: __init__.py  __main__.py  app.py  balances.py  check_rippled_sync_state.py  config.json  config.py  confirm.py  create.py  escrow.py  fee_check.py  make_offer.py  models.py  nft.py  offer.py  orderbook.py  randoms.py  state.py  utils.py
crash-handler/: crash_handler.cpp
docs/: transaction-modifiers.md
genesis/: accounts.json  genesis_ledger.json
prepare-workload/: README.md  generate_genesis.py  main.py  network.toml.example  pyproject.toml  settings.toml
prepare-workload/prepare_workload/: __init__.py  amendments.py  formatting.py  generate_unl.py  node_config.py  settings.py
prepare-workload/prepare_workload/compose/: render_compose.py
prepare-workload/prepare_workload/templates/: compose.yml.mako  fuzzer.cfg.mako  fuzzer_service.yml.mako  isolated_validator_rippled.cfg.mako  isolated_validator_xrpld.cfg.mako  rippled.cfg.mako  service.yml.mako  sidecar_service.yml.mako  unl_service.yml.mako  xrpld.cfg.mako
prepare-workload/prepare_workload/unl_server/: app.py
scripts/: amendment_tracker.py  antithesis_fetch.py  assess_health.py  check-assembler-roundtrip  check-endpoints  check-fuzz-coverage  check-imports  check-modifier-coverage  ledger_monitor.py  modifier-coverage-model
sidecar/: Dockerfile  compose.yaml  docker-compose.yml  sidecar.py
simple/: pyproject.toml
simple/src/simple/: __init__.py  main.py
test_composer/all_transactions/: eventually_network_probe.sh  eventually_payment.sh  first_setup.sh  parallel_driver_account_delete_random.sh  parallel_driver_account_set_random.sh  parallel_driver_add_accounts.sh  parallel_driver_amm_bid_random.sh  parallel_driver_amm_create_random.sh  parallel_driver_amm_delete_random.sh  parallel_driver_amm_deposit_random.sh  parallel_driver_amm_vote_random.sh  parallel_driver_amm_withdraw_random.sh  parallel_driver_batch_random.sh  parallel_driver_batch_ten_random.sh  parallel_driver_cancel_offer.sh  parallel_driver_channel_claim_random.sh  parallel_driver_channel_create_random.sh  parallel_driver_channel_fund_random.sh  parallel_driver_check_cancel_random.sh  parallel_driver_check_cash_random.sh  parallel_driver_check_create_random.sh  parallel_driver_clawback_random.sh  parallel_driver_confidential_clawback_merge_race.sh  parallel_driver_confidential_clawback_random.sh  parallel_driver_confidential_concurrent_sends.sh  parallel_driver_confidential_convert_back_random.sh  parallel_driver_confidential_convert_random.sh  parallel_driver_confidential_convert_send_race.sh  parallel_driver_confidential_convertback_send_race.sh  parallel_driver_confidential_double_merge.sh  parallel_driver_confidential_merge_inbox_random.sh  parallel_driver_confidential_send_before_merge.sh  parallel_driver_confidential_send_clawback_merge.sh  parallel_driver_confidential_send_random.sh  parallel_driver_credential_accept_random.sh  parallel_driver_credential_create_random.sh  parallel_driver_credential_delete_random.sh  parallel_driver_delegate_set_random.sh  parallel_driver_deposit_preauth_random.sh  parallel_driver_did_delete_random.sh  (+79 more)
test_composer/tc_commands/: accept_offer.py  accounting.py  add_account.py  cancel_offer.py  client.py  create_and_use_ticket.py  create_offer.py  mint_nft.py  nft.py  nftoken_accept_offer.py  nftoken_burn.py  nftoken_create_offer.py  nftoken_mint.py  random_payment.py
workload/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  docker-compose.devcontainer.yml  docker-compose.yml  pyproject.toml
workload/scripts/: setup-confidential-crypto.sh
workload/src/workload/: __init__.py  __main__.py  account_set.py  amm.py  app.py  assembler.py  assertions.py  balances.py  batch.py  check_validators_closing.py  check_xrpld_sync_state.py  confidential_crypto.py  config.json  config.py  config.toml  constants.py  create.py  credentials.py  delegation.py  domains.py  features.py  fee_info.py  fuzz.py  gen_cmd.py  lending.py  local_development.md  logging_config.py  models.py  modifiers.py  mpt.py  nft.py  nft_utils.py  offer.py  params.py  payments.py  permissioned_domains.py  probe.py  randoms.py  rawfuzz.py  sequence.py  (+13 more)
workload/src/workload/templates/: screen.html  val.html.jinja  validator.html  validator_layout.mako
workload/src/workload/transactions/: __init__.py  account_delete.py  account_set.py  amm.py  batch.py  checks.py  clawback.py  confidential_mpt.py  credentials.py  delegation.py  deposit_preauth.py  did.py  domains.py  escrow.py  lending.py  mpt.py  mpt_dex.py  nft.py  offers.py  oracle.py  payment_channels.py  payments.py  permissioned_dex.py  set_regular_key.py  signer_list_set.py  sponsor_malformation.py  sponsored_create.py  sponsorship.py  tickets.py  trustlines.py  vaults.py
workload/src/workload/txn_factory/: builder.py
(+65 files in other folders)
