[project]
name = "simple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Legleux", email = "mlegleux@ripple.com" }
]
requires-python = ">=3.13"
dependencies = [
    "antithesis>=0.1.18",
    "fastapi[standard]>=0.122.0",
    "xrpl-py>=4.3.1",
]

[project.scripts]
simple = "simple:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
