[project]
name = "workload"
version = "0.1.1"
description = "Antithesis workload generator for XRP Ledger fuzzing"
authors = [
    { name = "Michael Legleux", email = "mlegleux@ripple.com" }
]
dependencies = [
    "xrpl-py",
    "antithesis>=0.1.17",
    "requests>=2.32.4",
    "anyio>=4.9.0",
    "ruamel-yaml>=0.18.14",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]
readme = "README.md"
requires-python = ">= 3.13"
license = { text = "MIT" }

[project.scripts]
workload = "workload.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.uv.sources]
# xrpl-py = { path = "../../xrpl-py" }
# legleux-generate-ledger = { path = "../../generate_ledger"}
