[project]
name = "workload"
version = "0.1.1"
description = "Antithesis workload generator for XRP Ledger fuzzing"
authors = [
    { name = "Michael Legleux", email = "mlegleux@ripple.com" }
]
dependencies = [
    "xrpl-py",
    "antithesis>=0.1.17",
    "requests>=2.32.4",
    "anyio>=4.9.0",
    "ruamel-yaml>=0.18.14",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]
readme = "README.md"
requires-python = ">= 3.13"
license = { text = "MIT" }

[project.scripts]
workload = "workload.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.13"
files = ["src/workload"]
warn_redundant_casts = true
warn_unused_ignores = true
# basedpyright is the xrpl-aware type gate (xrpl-py ships py.typed); mypy is the
# complementary flow/annotation checker, so third-party types resolve as Any here.
ignore_missing_imports = true

# [tool.uv.sources]
# xrpl-py = { path = "../../xrpl-py" }
# legleux-generate-ledger = { path = "../../generate_ledger"}
