[project]
name = "workload"
version = "0.1.1"
description = "Antithesis workload generator for XRP Ledger fuzzing"
authors = [
    { name = "Michael Legleux", email = "mlegleux@ripple.com" }
]
dependencies = [
    "xrpl-py",
    "antithesis>=0.1.17",
    "requests>=2.32.4",
    "anyio>=4.9.0",
    "ruamel-yaml>=0.18.14",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]
readme = "README.md"
requires-python = ">= 3.13"
license = { text = "MIT" }

[project.scripts]
workload = "workload.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.13"
files = ["src/workload"]
warn_redundant_casts = true
warn_unused_ignores = true
# basedpyright is the xrpl-aware type gate (xrpl-py ships py.typed); mypy is the
# complementary flow/annotation checker, so third-party types resolve as Any here.
ignore_missing_imports = true

# Confidential MPT (XLS-0096) and sponsor models come from xrpl-py's pre-3.3-release-group
# branch (converges the pre-release WIP branches; not yet released). Proof generation
# (xrpl/ext/confidential) is EXCLUDED from the core wheel this installs and is built
# separately in the Antithesis image; see scripts/setup-confidential-crypto.sh.
[tool.uv.sources]
xrpl-py = { git = "https://github.com/XRPLF/xrpl-py.git", branch = "pre-3.3-release-group" }
