[project]
    name = "workload"
    version = "0.1.0"
    description = "Add your description here"
    authors = [
        { name = "Michael Legleux", email = "mlegleux@ripple.com" }
    ]
    dependencies = [
        "xrpl-py",
        "requests",
        "antithesis>=0.1.17",
]
    readme = "README.md"
    requires-python = ">= 3.13"
    license = { text = "MIT" }

[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[tool.ruff]
    target-version = "py313"

# [tool.hatch.metadata]
#     allow-direct-references = true

# [tool.hatch.build.targets.sdist]
#     include = [
#         "src/workload",
#         "config.json",
#     ]
# [tool.hatch.build.targets.wheel]
#     packages = ["src/workload"]
#     include = ["config.json"]

# [tool.hatch.build.targets.wheel.force-include]
# "config.json" = "workload/config.json"
