[project]
    name = "workload"
    version = "0.1.0"
    description = "Add your description here"
    authors = [
        { name = "Michael Legleux", email = "mlegleux@ripple.com" }
    ]
    dependencies = [
        "xrpl-py",
        "requests",
        "antithesis>=0.1.17",
]
    readme = "README.md"
    requires-python = ">= 3.13"
    license = { text = "MIT" }

[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[tool.ruff]
    target-version = "py313"
    select = [
        "ANN201", # methods must have return types
        "COM812", # Remove whenever Ruff formatter being used
    ]
    exclude = [
        ".git",
    ]

[tool.ruff.lint]
    select = [
        "E", 
        "F",
    ]
    ignore = []
